objects/Carrier_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Carrier__c</externalName>
    <fields>
        <fullName>AK_Carrier_c__c</fullName>
        <externalDeveloperName>AK_Carrier__c</externalDeveloperName>
        <label>AK Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTokenExpiresAt_c__c</fullName>
        <externalDeveloperName>AccessTokenExpiresAt__c</externalDeveloperName>
        <label>AccessTokenExpiresAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessToken_c__c</fullName>
        <externalDeveloperName>AccessToken__c</externalDeveloperName>
        <label>AccessToken</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Active__c</externalDeveloperName>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_Carrier_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Valid_Carrier__c</externalDeveloperName>
        <label>Is Valid Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Carrier Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshTokenExpiresAT_c__c</fullName>
        <externalDeveloperName>RefreshTokenExpiresAT__c</externalDeveloperName>
        <inlineHelpText>Field for storing Refresh token Expiration date</inlineHelpText>
        <label>RefreshTokenExpiresAT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefreshToken_c__c</fullName>
        <externalDeveloperName>RefreshToken__c</externalDeveloperName>
        <label>RefreshToken</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <label>Carrier Ext</label>
    <pluralLabel>Carriers Ext</pluralLabel>
</CustomObject>